fix: layout issue with emergency banner and no nav items

--- a/src/lbcamden/components/header/_index.scss
+++ b/src/lbcamden/components/header/_index.scss
@@ -3,10 +3,13 @@ $lbcamden-header-colour: lbcamden-colour("black");
 
 .lbcamden-header {
   position: relative;
-  min-height: $lbcamden-header-height;
   border-bottom: 10px solid lbcamden-colour("govuk-brand1-1-colour");
   color: lbcamden-colour("white");
   background: $lbcamden-header-colour;
+
+  &__bar {
+    min-height: $lbcamden-header-height;
+  }
 
   &__logo {
     @include govuk-responsive-margin(2, "top");
